# RSSgator

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  globals.h  main.c  server.c  server.h
